project/test/semantics/unit/good/Good23_shouldEvaluateSystemBuiltinMethodsIncludingExit.ty
singleton class SystemTest {
    
    actions: {
        end: (code: Int) -> Void = System#exit(code)
        
        main: () -> Int = {
            val code: Int = 43;
            this#end(code)
            2 + 2
        }
    }
}
