project/test/semantics/unit/bad/input/Bad58_shouldCheckArgumentListTypesInBuiltinMethods.ty
singleton class SystemTest {
    
    actions: {
        someAction: () -> Void = Pass
        
        otherAction: (x: Int) -> Int = {
            Pass
            2 * x
        }
        
        main: () -> Int = {
            System#exit(3, 3)
            this#otherAction(8)
        }
    }
}
